# medical-service

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  renovate.json5  tasks.py
config/: .env.local.template  .env.template  __init__.py  auth.py  database.py  redis.py  s3.py
email/: app.py
email_notifications/: app.py
email_notifications/email_config/: __init__.py  base.py  sign_up.py
email_notifications/grpc_config/: email.proto  email_pb2.py  email_pb2.pyi  email_pb2_grpc.py
email_notifications/templates/: sign_up.html
migrations/: env.py
migrations/versions/: 0001_init_database_schema.py  0002_add_user_avatar.py  0003_add_message_db.py  3dc37330313d_.py  60a873fb42b6_.py  650345c2d511_.py
src/: app.py  tasks.py
src/admin/: user.py
src/api/: __init__.py  record.py  user.py
src/dependencies/: __init__.py  auth.py
src/entities/: __init__.py  core.py  record.py  token.py  user.py
src/extensions/: __init__.py  checker.py  request.py  s3.py
src/factories/: __init__.py  base.py  record.py  user.py
src/grpc/email/: email_pb2.py  email_pb2.pyi  email_pb2_grpc.py  grpc__client.py
src/grpc_clients/email_notifications/: client.py
src/models/: __init__.py  chat.py  core.py  message.py  record.py  token.py  user.py
src/permissions/: __init__.py  auth.py  base.py  record.py  user_is_employee.py
src/redis/: client.py
src/repositories/: __init__.py  blacklist.py  chat.py  core.py  message.py  record.py  user.py
src/services/: __init__.py  auth_service.py  reserve.py
src/websocket/: message.py
tests/: conftest.py  utils.py
tests/test_auth/: test_logout.py  test_sign_in.py  test_sign_up.py
tests/test_record/: test_create.py  test_list.py  test_reserved.py  test_retrieve.py  test_update.py
tests/test_user/: test_list.py  test_profile.py  test_retrieve.py  test_update.py
ui/: app.json  metro.config.js  package-lock.json  package.json
ui/.expo/types/: router.d.ts
ui/android/: settings.gradle
ui/android/app/: build.gradle
ui/android/app/src/main/java/com/tempproject/: MainApplication.java
ui/api/: auth.ts  schemes.ts
ui/api/user/: auth.ts  core.ts  crud.ts  schemes.ts
ui/app/: _layout.tsx  index.tsx  login.tsx  sign_up.tsx
ui/app/branches/: index.tsx
ui/app/profile/: index.tsx
ui/components/auth/: login.tsx  profile.tsx  sign_up.tsx
