[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Framework to make backend apps
# https://pypi.org/project/fastapi/
fastapi = "^0.115.12"
ruff = "^0.11.7"
alembic = "1.13.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
