[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Framework to make backend apps
# https://pypi.org/project/fastapi/
fastapi = "^0.115.12"
ruff = "^0.11.7"
alembic = "1.13.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
pydantic = "^2.11.3"
uvicorn = "^0.34.2"
basedpyright = "^1.29.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-decouple = "^3.8"
pyjwt = "^2.10.1"
arrow = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
